--- a/src/app/features/client/page/client.component.html
+++ b/src/app/features/client/page/client.component.html
@@ -1,6 +1,3 @@
-<h2 class="mb-4 row">
-  <span class="col">Clientes</span>
-  <button class="btn btn-success col-auto" [routerLink]="['/clients/new']" routerLinkActive="router-link-active">+ Novo</button>
-</h2>
+<div class="fab" [routerLink]="['/clients/new']">+</div>
 <app-client-table></app-client-table>
 
