--- a/src/app/features/ticket/page/ticket.component.html
+++ b/src/app/features/ticket/page/ticket.component.html
@@ -1,8 +1,3 @@
-<h2 class="mb-4 row">
-  <span class="col">Financeiro - Lançamentos</span>
-  <div class="col-auto">
-    <button class="btn btn-success" [routerLink]="['/tickets/new']">+ Novo</button>
-  </div>
-</h2>
+<div class="fab" [routerLink]="['/tickets/new']">+</div>
 <app-ticket-table></app-ticket-table>
 
