--- a/src/app/features/ticket/components/ticket-form/ticket-form.component.html
+++ b/src/app/features/ticket/components/ticket-form/ticket-form.component.html
@@ -4,12 +4,12 @@
 
     <div class="form-row justify-content-center">
 
-      <div class="form-group col col-sm-12">
+      <div class="form-group col-md col-sm-12">
         <label for="date">Data</label>
         <input class="form-control" formControlName="date" type="date" id="date">
       </div>
 
-      <div class="form-group col col-sm-12">
+      <div class="form-group col-md col-sm-12">
         <label for="type">Tipo</label>
         <select formControlName="type" class="form-control" id="type">
           <option value="0">Despesa</option>
@@ -17,25 +17,25 @@
         </select>
       </div>
 
-      <div class="form-group col col-sm-12">
+      <div class="form-group col-md col-sm-12">
         <label for="value">Valor</label>
         <input class="form-control" formControlName="value" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',' }" id="value">
       </div>
     </div>
 
     <div class="form-row">
-      <div class="form-group col col-sm-12">
+      <div class="form-group col-md col-sm-12">
         <label for="account">Conta</label>
         <input class="form-control" formControlName="account" type="text" id="account">
       </div>
 
 
-        <div class="form-group col col-sm-12">
+        <div class="form-group col-md col-sm-12">
           <label for="client">Cliente</label>
           <input class="form-control" formControlName="client" type="text" id="client">
         </div>
 
-        <div class="form-group col col-sm-12-auto">
+        <div class="form-group col-md col-sm-12-auto">
 
           <div class="form-check mt-4 form-check-inline">
             <input class="form-check-input" type="radio" formControlName="status" id="status1" value="true">
@@ -55,12 +55,12 @@
     </div>
 
     <div class="form-row">
-      <div class="form-group col col-sm-12">
+      <div class="form-group col-md col-sm-12">
         <label for="category">Categoria</label>
         <input class="form-control" formControlName="category" type="text" id="category">
       </div>
 
-      <div class="form-group col col-sm-12">
+      <div class="form-group col-md col-sm-12">
         <label for="description">Descrição</label>
         <input class="form-control" formControlName="description" type="text" id="description">
       </div>
