--- a/src/app/features/ticket/components/ticket-table/ticket-table.component.html
+++ b/src/app/features/ticket/components/ticket-table/ticket-table.component.html
@@ -1,22 +1,23 @@
-<div class="row mb-4">
-  <div class="col">Caixa: {{ total }}</div>
-  <div class="col">A receber: {{ aReceber }}</div>
-  <div class="col">A pagar: {{ aPagar }}</div>
-  <div class="col">Previsto: {{ totalPrevisto }}</div>
-</div>
+<table datatable [dtOptions]="dtOptions" [dtTrigger]="dtTrigger" class="table table-striped ">
+  <thead>
+    <tr>
+      <th scope="col" *ngFor="let item of columns">{{ item }}</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let item of tickets">
+      <td>{{ item.transactionDate }}</td>
+      <td>{{ item.formatedType }}</td>
+      <td>{{ item.account }}</td>
+      <td>{{ item.value }}</td>
+      <td>{{ item.formatedSZtatus }}</td>
+      <td>{{ item.category }}</td>
+      <td>{{ item.description }}</td>
+      <td>{{ item.client }}</td>
+      <td>
+        <button (click)="delete(item._id)" class="btn btn-danger">Deletar</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
 
-
-<div>
-  <ngx-datatable
-    class="bootstrap"
-    [columnMode]="'force'"
-    [headerHeight]="50"
-    [footerHeight]="50"
-    rowHeight="auto"
-    [rows]="rows"
-    [columns]="columns"
-    [limit]="10"
-  > </ngx-datatable>
-</div>
-
-<!-- <button (click)="delete(ticket._id)" class="btn btn-danger">Deletar</button> -->
